# sysy-rs

./: .gitignore  Cargo.toml  README.md
input/: hello.c  hello.ll
output/: hello.ir  hello.ll  hello.riscv
src/: main.rs  sysy.lalrpop
src/llvm/: error.rs  eval.rs  gen.rs  mod.rs  values.rs
src/llvm_ir/: error.rs  eval.rs  gen.rs
src/parser/: ast.rs  sysy.ebnf
src/tests/: mod.rs
src/tests/cases/: add_exp  array  array_init  array_param  block  break  const  const_decl  const_var  continue  function  global  if  rel_exp  shortcut  unary  var  var_decl  while
src/tests/output/: add_exp  array  array_init  array_param  block  break  const  const_decl  const_var  continue  function  global  global_var  if  just_main  rel_exp  shortcut  unary  var  var_decl  while
