[package]
name = "sysy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
clap = { version = "4", features = ["cargo"] }
inkwell = { version = "0.1", features = ["llvm10-0"] }
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1.7"
thiserror = "1.0"
